Fixed Pack.png showing behind icon. Improved MOTD Quality Added a coords/chunk convertor

--- a/src/Public/assets/css/stylesheet.css
+++ b/src/Public/assets/css/stylesheet.css
@@ -1,5 +1,5 @@
 #navbar {
-    margin-left: 16vw;
+    margin: 0 16vw;
 }
 
 #content {
